force-app/main/default/objects/MRN_Line_Item__c/MRN_Line_Item__c.object-meta.xml
<CustomObject>
    <label>MRN Line Item</label>
    <nameField>
        <displayFormat>MLN-{00000}</displayFormat>
        <label>MRN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRN Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>