force-app/main/default/objects/MRN_Line_Item__c/fields/Assessable_Value_Including_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Assessable_Value_Including_Insurance__c</fullName>
    <formula>Total_Item_Value_in_INR__c*((100 + VALUE( TEXT(MRN__r.Insurance_of_BOE__c)))/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessable Value (Including Insurance)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>