force-app/main/default/objects/MRN_Line_Item__c/fields/Assessable_Value_INR__c.field-meta.xml
<CustomField>
    <fullName>Assessable_Value_INR__c</fullName>
    <label>Assessable Value (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>