force-app/main/default/objects/MRN_Line_Item__c/fields/BIN_NO__c.field-meta.xml
<CustomField>
    <fullName>BIN_NO__c</fullName>
    <label>BIN NO.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>