force-app/main/default/objects/MRN_Line_Item__c/fields/CGST_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_Formula__c</fullName>
    <formula>Taxable_Amount_Formula__c *  CGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>