force-app/main/default/objects/MRN_Line_Item__c/fields/CLG_CHRG__c.field-meta.xml
<CustomField>
    <fullName>CLG_CHRG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLG. CHARGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>