force-app/main/default/objects/MRN_Line_Item__c/fields/Custom_Duty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Duty_Amount__c</fullName>
    <formula>((Assessable_Value_Including_Insurance__c * Duty_Rates__c)/100 )*(( 100 + Sur_Rate__c)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Duty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>