force-app/main/default/objects/MRN_Line_Item__c/fields/Delivery_Note_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Note Line Item</label>
    <referenceTo>Delivery_Note_Line_Item__c</referenceTo>
    <relationshipLabel>MRN Line Items</relationshipLabel>
    <relationshipName>MRN_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>