force-app/main/default/objects/MRN_Line_Item__c/fields/Demurrage_Charges__c.field-meta.xml
<CustomField>
    <fullName>Demurrage_Charges__c</fullName>
    <label>Demurrage Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>