force-app/main/default/objects/MRN_Line_Item__c/fields/DO_CHARGE__c.field-meta.xml
<CustomField>
    <fullName>DO_CHARGE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DO CHARGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>