force-app/main/default/objects/MRN_Line_Item__c/fields/DOC_Number__c.field-meta.xml
<CustomField>
    <fullName>DOC_Number__c</fullName>
    <label>DOC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>