force-app/main/default/objects/MRN_Line_Item__c/fields/DOC_Number_Date__c.field-meta.xml
<CustomField>
    <fullName>DOC_Number_Date__c</fullName>
    <formula>DOC_Number__c + if( ISNULL( Purchase_Order_Line_Item__r.Purchase_Order__r.PO_Date__c ),  &apos;&apos;, &apos; / &apos;+text( DAY(Purchase_Order_Line_Item__r.Purchase_Order__r.PO_Date__c )))+CASE(MONTH(Purchase_Order_Line_Item__r.Purchase_Order__r.PO_Date__c ), 1, &quot;-January&quot;, 2, &quot;-February&quot;, 3, &quot;-March&quot;,  4, &quot;-April&quot;,  5, &quot;-May&quot;,  6, &quot;-June&quot;, 7, &quot;-July&quot;, 8, &quot;-August&quot;, 9, &quot;-September&quot;, 10, &quot;-October&quot;, 11, &quot;-November&quot;, 12, &quot;-December&quot;, &quot;&quot;)+
if( ISNULL(Purchase_Order_Line_Item__r.Purchase_Order__r.PO_Date__c ),  &apos;&apos;, &apos;-&apos;+text( YEAR(Purchase_Order_Line_Item__r.Purchase_Order__r.PO_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOC Number &amp; Date</label>
    <type>Text</type>
</CustomField>