force-app/main/default/objects/MRN_Line_Item__c/fields/Duty_Rate__c.field-meta.xml
<CustomField>
    <fullName>Duty_Rate__c</fullName>
    <label>Duty Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>