force-app/main/default/objects/MRN_Line_Item__c/fields/Duty_Rates__c.field-meta.xml
<CustomField>
    <fullName>Duty_Rates__c</fullName>
    <label>Custom Duty Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>