force-app/main/default/objects/MRN_Line_Item__c/fields/Freight_Other__c.field-meta.xml
<CustomField>
    <fullName>Freight_Other__c</fullName>
    <label>Freight (Other)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>