force-app/main/default/objects/MRN_Line_Item__c/fields/Freight_Surcharge_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Freight_Surcharge_on_Invoice__c</fullName>
    <label>Freight &amp; Surcharge on Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>