force-app/main/default/objects/MRN_Line_Item__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GST%</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>