force-app/main/default/objects/MRN_Line_Item__c/fields/HSN_SAC__c.field-meta.xml
<CustomField>
    <fullName>HSN_SAC__c</fullName>
    <label>HSN/SAC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>