force-app/main/default/objects/MRN_Line_Item__c/fields/IGST_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount_Formula__c</fullName>
    <formula>Taxable_Amount_Formula__c * IGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>