force-app/main/default/objects/MRN_Line_Item__c/fields/Indent_Sales_officer__c.field-meta.xml
<CustomField>
    <fullName>Indent_Sales_officer__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Indent_Line_Item__r.Purchase_Indent__r.Sales_Officer__r.FirstName +&apos; &apos;+Purchase_Order_Line_Item__r.Purchase_Indent_Line_Item__r.Purchase_Indent__r.Sales_Officer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indent Sales officer</label>
    <type>Text</type>
</CustomField>