force-app/main/default/objects/MRN_Line_Item__c/fields/Indent_Sales_Officer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Indent_Sales_Officer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indent Sales Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MRN_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>