force-app/main/default/objects/MRN_Line_Item__c/fields/Insurance_Other__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Other__c</fullName>
    <label>Insurance (Other)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>