force-app/main/default/objects/MRN_Line_Item__c/fields/Item_Price_Unit__c.field-meta.xml
<CustomField>
    <fullName>Item_Price_Unit__c</fullName>
    <label>Item Price/Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>