force-app/main/default/objects/MRN_Line_Item__c/fields/Item_Value_with_Freight_and_Surcharges__c.field-meta.xml
<CustomField>
    <fullName>Item_Value_with_Freight_and_Surcharges__c</fullName>
    <formula>Total_Amount_GBP__c + ( Total_Amount_GBP__c* MRN__r.Freight_of_Invoice__c )/100 + (Total_Amount_GBP__c* MRN__r.Inv_Surcharge__c )/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Value with Freight and Surcharges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>