force-app/main/default/objects/MRN_Line_Item__c/fields/Item_Value_With_Freight_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Item_Value_With_Freight_Surcharge__c</fullName>
    <label>Item Value With Freight &amp; Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>