force-app/main/default/objects/MRN_Line_Item__c/fields/Landed_Cost_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Landed_Cost_Unit_Rate__c</fullName>
    <formula>Total_Landed_Amount__c/ Bill_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landed Cost/Unit Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>