force-app/main/default/objects/MRN_Line_Item__c/fields/Landed_Unit_Price_INR__c.field-meta.xml
<CustomField>
    <fullName>Landed_Unit_Price_INR__c</fullName>
    <label>Landed Unit Price (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>