force-app/main/default/objects/MRN_Line_Item__c/fields/Landing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Landing_Rate__c</fullName>
    <label>Landing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>