force-app/main/default/objects/MRN_Line_Item__c/fields/Less_Insurance_Charges_is_not_our_cost__c.field-meta.xml
<CustomField>
    <fullName>Less_Insurance_Charges_is_not_our_cost__c</fullName>
    <label>Less (Insurance Charges is not our cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>