force-app/main/default/objects/MRN_Line_Item__c/fields/Loading_Unloading_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Loading_Unloading_Other_Charges__c</fullName>
    <label>Loading/ Unloading/ Other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>