force-app/main/default/objects/MRN_Line_Item__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <label>MRN</label>
    <referenceTo>MRN__c</referenceTo>
    <relationshipLabel>MRN Line Items</relationshipLabel>
    <relationshipName>MRN_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>