force-app/main/default/objects/MRN_Line_Item__c/fields/Net_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Formula__c</fullName>
    <formula>Taxable_Amount_Formula__c + CGST_Amount_Formula__c + IGST_Amount_Formula__c + SGST_Amount_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>