force-app/main/default/objects/MRN_Line_Item__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Part Number</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>MRN Line Items</relationshipLabel>
    <relationshipName>MRN_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>