force-app/main/default/objects/MRN_Line_Item__c/fields/Pending_MRN_Qty__c.field-meta.xml
<CustomField>
    <fullName>Pending_MRN_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pending MRN Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>