force-app/main/default/objects/MRN_Line_Item__c/fields/PO_CGST__c.field-meta.xml
<CustomField>
    <fullName>PO_CGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PO CGST</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>