force-app/main/default/objects/MRN_Line_Item__c/fields/PO_CGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_CGST_Amount__c</fullName>
    <formula>PO_CGST__c * PO_Taxable_Amount_input__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO CGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>