force-app/main/default/objects/MRN_Line_Item__c/fields/Po_date__c.field-meta.xml
<CustomField>
    <fullName>Po_date__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order__r.PO_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Po date</label>
    <type>Date</type>
</CustomField>