force-app/main/default/objects/MRN_Line_Item__c/fields/Po_Doc_no__c.field-meta.xml
<CustomField>
    <fullName>Po_Doc_no__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order__r.Purchase_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Po Doc no</label>
    <type>Text</type>
</CustomField>