force-app/main/default/objects/MRN_Line_Item__c/fields/PO_IGST__c.field-meta.xml
<CustomField>
    <fullName>PO_IGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PO IGST</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>