force-app/main/default/objects/MRN_Line_Item__c/fields/PO_QTY__c.field-meta.xml
<CustomField>
    <fullName>PO_QTY__c</fullName>
    <label>PO QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>