force-app/main/default/objects/MRN_Line_Item__c/fields/PO_SGST__c.field-meta.xml
<CustomField>
    <fullName>PO_SGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PO SGST</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>