force-app/main/default/objects/MRN_Line_Item__c/fields/PO_SGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_SGST_Amount__c</fullName>
    <formula>PO_SGST__c * PO_Taxable_Amount_input__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO SGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>