force-app/main/default/objects/MRN_Line_Item__c/fields/PO_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Taxable_Amount__c</fullName>
    <formula>Assessable_Value_Including_Insurance__c +  Custom_Duty_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>