force-app/main/default/objects/MRN_Line_Item__c/fields/PO_Taxable_Amount_input__c.field-meta.xml
<CustomField>
    <fullName>PO_Taxable_Amount_input__c</fullName>
    <label>PO Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>