force-app/main/default/objects/MRN_Line_Item__c/fields/POC_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Date__c</fullName>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>