force-app/main/default/objects/MRN_Line_Item__c/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MRN_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>