force-app/main/default/objects/MRN_Line_Item__c/fields/Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line Item</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>MRN Line Items</relationshipLabel>
    <relationshipName>MRN_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>