force-app/main/default/objects/MRN_Line_Item__c/fields/RECEIPT_QTY__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_QTY__c</fullName>
    <label>RECEIPT QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>