force-app/main/default/objects/MRN_Line_Item__c/fields/Received_QTY__c.field-meta.xml
<CustomField>
    <fullName>Received_QTY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Received QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>