force-app/main/default/objects/MRN_Line_Item__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <formula>Delivery_Note_Line_Item__r.Sales_Order_Dispatch_Delivery_Note__r.Sales_Order__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order</label>
    <type>Text</type>
</CustomField>