force-app/main/default/objects/MRN_Line_Item__c/fields/Short_QTY__c.field-meta.xml
<CustomField>
    <fullName>Short_QTY__c</fullName>
    <formula>if(ispickval( MRN__r.MRN_Type__c ,&apos;Sales Return&apos;),0,Bill_QTY__c -  Received_QTY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>