force-app/main/default/objects/MRN_Line_Item__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Stock__c.Product_Part__c</field>
            <operation>equals</operation>
            <valueField>$Source.Part_Number__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>MRN Line Items</relationshipLabel>
    <relationshipName>MRN_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>