force-app/main/default/objects/MRN_Line_Item__c/fields/Sur_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sur_Rate__c</fullName>
    <label>Custom Duty Sur. Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>