force-app/main/default/objects/MRN_Line_Item__c/fields/Taxable_Value__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Taxable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>