force-app/main/default/objects/MRN_Line_Item__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>if(ISPICKVAL(MRN__r.MRN_Type__c, &apos;Sales Return&apos;),  Quantity__c  ,  Bill_QTY__c  )* Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Return Case ( Received Quantity * sales price)
Purchase Order Case ( Short Quantity * sales price)</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>