force-app/main/default/objects/MRN_Line_Item__c/fields/Total_Amount_GBP__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_GBP__c</fullName>
    <formula>Bill_QTY__c *  Item_Price_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>