force-app/main/default/objects/MRN_Line_Item__c/fields/Total_Amount_Input__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Input__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>