force-app/main/default/objects/MRN_Line_Item__c/fields/Total_Expenses_Except_Custom_Duty__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Except_Custom_Duty__c</fullName>
    <label>Total Expenses Except Custom Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>