force-app/main/default/objects/MRN_Line_Item__c/fields/Total_For_Book_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_For_Book_formula__c</fullName>
    <formula>GST_Amount__c +  PO_CGST_Amount__c  +  PO_IGST_Amount__c  +  PO_SGST_Amount__c  +  PO_Taxable_Amount_input__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total For Books</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>