force-app/main/default/objects/MRN_Line_Item__c/fields/Total_for_Books__c.field-meta.xml
<CustomField>
    <fullName>Total_for_Books__c</fullName>
    <label>Total for Books</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>