force-app/main/default/objects/MRN_Line_Item__c/fields/Total_Item_Value_in_INR__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Value_in_INR__c</fullName>
    <formula>IF( ISPICKVAL( MRN__r.MRN_Delivery_Type__c , &apos;import&apos;) , Item_Value_with_Freight_and_Surcharges__c * MRN__r.Exchange_Rate__c,  Total_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Item Value in INR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>