force-app/main/default/objects/MRN_Line_Item__c/fields/Total_Item_Value_In_INR_input__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Value_In_INR_input__c</fullName>
    <label>Total Item Value In (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>