force-app/main/default/objects/MRN_Line_Item__c/fields/Total_Landed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Landed_Amount__c</fullName>
    <formula>IF(  ISPICKVAL(MRN__r.MRN_Delivery_Type__c, &apos;Import&apos;)  , 
( Total_Item_Value_In_INR_input__c + Custom_Duty_Amount__c)+ (  Total_Amount_Input__c * MRN__r.Exchange_Rate__c *    MRN__r.dcCharges__c  )+ ( Total_Amount_Input__c * MRN__r.Exchange_Rate__c * MRN__r.clgCharges__c ),
 Total_Item_Value_In_INR_input__c +(Total_Item_Value_In_INR_input__c * MRN__r.Total_Charges_Percentage__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Landed Amount (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>