force-app/main/default/objects/MRN_Line_Item__c/fields/Ware_House_Formula__c.field-meta.xml
<CustomField>
    <fullName>Ware_House_Formula__c</fullName>
    <formula>CASESAFEID(MRN__r.Ware_House__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ware House Formula</label>
    <type>Text</type>
</CustomField>