force-app/main/default/objects/MRN_Line_Item__c/validationRules/Bill_quantity_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_quantity_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Bill_QTY__c  &lt;  Received_QTY__c</errorConditionFormula>
    <errorDisplayField>Bill_QTY__c</errorDisplayField>
    <errorMessage>Bill Quantity Can Never Be Less then Received Quantity</errorMessage>
</ValidationRule>